manifests/Server.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: backend
  namespace: swytch-peers
  labels:
    app.kubernetes.io/name: swytch-peers
    app.kubernetes.io/instance: backend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: swytch-peers
      app.kubernetes.io/instance: backend
  serviceName: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: swytch-peers
        app.kubernetes.io/instance: backend
    spec:
      containers:
        - name: backend
          image: registry.bottled.codes/peers/backend
          imagePullPolicy: IfNotPresent
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: swytch-peers
                    app.kubernetes.io/instance: backend
              weight: 100
  replicas: 12
